[dependencies]
anyhow = "1.0.97"
hyperapp_macro = "0.2.0"
process_macros = "0.1"
rmp-serde = "1.3.0"
serde_json = "1.0"
wit-bindgen = "0.42.1"

[dependencies.hyperware_process_lib]
features = ["hyperapp"]
version = "3.0.0"

[dependencies.id_caller_utils]
optional = true
path = "../target/id-caller-utils"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
caller-utils = ["id_caller_utils"]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "id"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
